made images work

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,3 +65,4 @@ assets:
   - assets/images/connections_logo.png
   - assets/images/letterquest_logo.png
   - assets/images/wordladder_logo.png
+  - assets/images/wordstorm.png
