--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   english_words: ^4.0.0
   provider: ^6.1.2
   sqflite: ^2.4.2
+  sqflite_common_ffi: ^2.3.1
+  sqflite_common_ffi_web: ^0.4.0
   path: ^1.9.1
 
 dev_dependencies:
